<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/reset" android:icon="@android:drawable/ic_menu_revert" app:showAsAction="never" android:title="@string/reset"/>
    <item android:id="@+id/next_section" android:icon="@android:drawable/ic_media_next" app:showAsAction="never" android:title="@string/next_section"/>
    <item android:id="@+id/select_checklist" android:icon="@drawable/baseline_checklist_rtl_24" app:showAsAction="never" android:title="@string/select_checklist"/>
    <item android:id="@+id/toggle_stt" android:icon="@drawable/baseline_headset_mic_24" app:showAsAction="never" android:title="@string/toggle_sst"/>
</menu>