<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/checklist_item_row"
    android:gravity="center"
    >

    <ImageView
        android:id="@+id/status_symbol"
        android:src="@drawable/baseline_check_box_outline_blank_24"
        android:background="@color/cl_text_conf_unchecked_backgroundColor"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_marginStart="0dp"
        android:contentDescription="@string/status_symbol_description"
    />

    <!--
    <CheckBox
        android:id="@+id/checked"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:scaleX="1.6"
        android:scaleY="1.6"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@color/confirmation_text_color"
        />
-->
    <!--


        android:textColor="@color/confirmation_text_color"
        android:buttonTint="@color/confirmation_text_color"
    -->

    <TextView
        android:id="@+id/visible_description"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/status_symbol"
        android:layout_height="40dp"
        android:text="@string/visible_description_demo_text"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/visible_task"
        android:layout_width="wrap_content"

        android:layout_toStartOf="@+id/status_symbol"
        android:layout_height="40dp"
        android:text="@string/visible_confirmation_demo_text"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center_vertical|end"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/cl_text_conf_unchecked_backgroundColor"
        />
</RelativeLayout>
